# ooca-ticket-triage-agent

./: README.md  example.env  example_batch.json  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/triage_agent/: chat.py  knowledge_base_data.py  runner.py
src/triage_agent/core/: __init__.py  agent.py  triage_logic.py
src/triage_agent/models/: __init__.py  ticket.py  tools.py  triage_output.py
src/triage_agent/prompts/: __init__.py  system_prompt.py
src/triage_agent/tools/: __init__.py  base.py  customer_history.py  jira.py  knowledge_base.py  mcp_example.py  pagerduty.py  region_status.py  slack.py
tests/: __init__.py  conftest.py  test_agent.py  test_integration.py  test_models.py  test_sample_tickets.py  test_tools_mcp.py  test_tools_native.py  test_triage_logic.py
